--- a/classes/data.plotproperty.html
+++ b/classes/data.plotproperty.html
@@ -116,7 +116,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in data/plot.ts:199</li>
+									<li>Defined in data/plot/property.ts:32</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -147,7 +147,7 @@
 					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:209</li>
+							<li>Defined in data/plot/property.ts:42</li>
 						</ul>
 					</aside>
 				</section>
@@ -157,7 +157,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:208</li>
+							<li>Defined in data/plot/property.ts:41</li>
 						</ul>
 					</aside>
 				</section>
@@ -167,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#plotpropertytype" class="tsd-signature-type">PlotPropertyType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:211</li>
+							<li>Defined in data/plot/property.ts:44</li>
 						</ul>
 					</aside>
 				</section>
@@ -177,7 +177,7 @@
 					<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#plotpropertyvalue" class="tsd-signature-type">PlotPropertyValue</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:210</li>
+							<li>Defined in data/plot/property.ts:43</li>
 						</ul>
 					</aside>
 				</section>
