--- a/enums/data.formplottypeid.html
+++ b/enums/data.formplottypeid.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>LineDescription | PiWeb Plot Extension API Reference</title>
+	<title>FormplotTypeId | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/drawing.html">drawing</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="drawing.linedescription-1.html">LineDescription</a>
+					<a href="data.formplottypeid.html">FormplotTypeId</a>
 				</li>
 			</ul>
-			<h1>Interface LineDescription</h1>
+			<h1>Enumeration FormplotTypeId</h1>
 		</div>
 	</div>
 </header>
@@ -69,68 +69,129 @@
 		<div class="col-8 col-content">
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>Can be used to initialize a <a href="../classes/drawing.linegeometry.html">LineGeometry</a>.</p>
-					</div>
 				</div>
-			</section>
-			<section class="tsd-panel tsd-hierarchy">
-				<h3>Hierarchy</h3>
-				<ul class="tsd-hierarchy">
-					<li>
-						<span class="target">LineDescription</span>
-						<ul class="tsd-hierarchy">
-							<li>
-								<a href="drawing.linegeometrydescription.html" class="tsd-signature-type">LineGeometryDescription</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Properties</h3>
+							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#borepattern" class="tsd-kind-icon">Bore<wbr>Pattern</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#circle" class="tsd-kind-icon">Circle</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#circleinprofile" class="tsd-kind-icon">Circle<wbr>InProfile</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#curve" class="tsd-kind-icon">Curve</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#cylinder" class="tsd-kind-icon">Cylinder</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#fourier" class="tsd-kind-icon">Fourier</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#line" class="tsd-kind-icon">Line</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#none" class="tsd-kind-icon">None</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#pitch" class="tsd-kind-icon">Pitch</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.formplottypeid.html#plane" class="tsd-kind-icon">Plane</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="end" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> end</h3>
-					<div class="tsd-signature tsd-kind-icon">end<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<h2>Enumeration members</h2>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="borepattern" class="tsd-anchor"></a>
+					<h3>Bore<wbr>Pattern</h3>
+					<div class="tsd-signature tsd-kind-icon">Bore<wbr>Pattern<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;7</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:117</li>
+							<li>Defined in data/plot.ts:38</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="start" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> start</h3>
-					<div class="tsd-signature tsd-kind-icon">start<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="circle" class="tsd-anchor"></a>
+					<h3>Circle</h3>
+					<div class="tsd-signature tsd-kind-icon">Circle<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:116</li>
+							<li>Defined in data/plot.ts:32</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="transform" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> transform</h3>
-					<div class="tsd-signature tsd-kind-icon">transform<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#transformdescription" class="tsd-signature-type">TransformDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="circleinprofile" class="tsd-anchor"></a>
+					<h3>Circle<wbr>InProfile</h3>
+					<div class="tsd-signature tsd-kind-icon">Circle<wbr>InProfile<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;8</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:118</li>
+							<li>Defined in data/plot.ts:39</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="curve" class="tsd-anchor"></a>
+					<h3>Curve</h3>
+					<div class="tsd-signature tsd-kind-icon">Curve<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:34</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="cylinder" class="tsd-anchor"></a>
+					<h3>Cylinder</h3>
+					<div class="tsd-signature tsd-kind-icon">Cylinder<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;5</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:36</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="fourier" class="tsd-anchor"></a>
+					<h3>Fourier</h3>
+					<div class="tsd-signature tsd-kind-icon">Fourier<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;9</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:40</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="line" class="tsd-anchor"></a>
+					<h3>Line</h3>
+					<div class="tsd-signature tsd-kind-icon">Line<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:35</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="none" class="tsd-anchor"></a>
+					<h3>None</h3>
+					<div class="tsd-signature tsd-kind-icon">None<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:31</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="pitch" class="tsd-anchor"></a>
+					<h3>Pitch</h3>
+					<div class="tsd-signature tsd-kind-icon">Pitch<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;6</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:37</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="plane" class="tsd-anchor"></a>
+					<h3>Plane</h3>
+					<div class="tsd-signature tsd-kind-icon">Plane<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot.ts:33</li>
 						</ul>
 					</aside>
 				</section>
@@ -145,10 +206,15 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/data.html">data</a>
-					</li>
 					<li class="current tsd-kind-external-module">
+						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -187,17 +253,38 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="drawing.linedescription-1.html" class="tsd-kind-icon">Line<wbr>Description</a>
+					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
+						<a href="data.formplottypeid.html" class="tsd-kind-icon">Formplot<wbr>Type<wbr>Id</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#borepattern" class="tsd-kind-icon">Bore<wbr>Pattern</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#circle" class="tsd-kind-icon">Circle</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#circleinprofile" class="tsd-kind-icon">Circle<wbr>InProfile</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#curve" class="tsd-kind-icon">Curve</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#cylinder" class="tsd-kind-icon">Cylinder</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#fourier" class="tsd-kind-icon">Fourier</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#line" class="tsd-kind-icon">Line</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#none" class="tsd-kind-icon">None</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#pitch" class="tsd-kind-icon">Pitch</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.formplottypeid.html#plane" class="tsd-kind-icon">Plane</a>
 							</li>
 						</ul>
 					</li>
