--- a/classes/data.circleinprofileplotgeometry.html
+++ b/classes/data.circleinprofileplotgeometry.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Vector | PiWeb Plot Extension API Reference</title>
+	<title>CircleInProfilePlotGeometry | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,10 @@
 					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="data.vector.html">Vector</a>
+					<a href="data.circleinprofileplotgeometry.html">CircleInProfilePlotGeometry</a>
 				</li>
 			</ul>
-			<h1>Class Vector</h1>
+			<h1>Class CircleInProfilePlotGeometry</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>A vector is a tuple of three numbers that can act as position, size and direction.</p>
+						<p>Geometry for circle plots.</p>
 					</div>
 				</div>
 			</section>
@@ -78,7 +78,12 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Vector</span>
+						<a href="data.circleplotgeometry.html" class="tsd-signature-type">CirclePlotGeometry</a>
+						<ul class="tsd-hierarchy">
+							<li>
+								<span class="target">CircleInProfilePlotGeometry</span>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</section>
@@ -89,15 +94,18 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="data.vector.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-overwrite"><a href="data.circleinprofileplotgeometry.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#x" class="tsd-kind-icon">x</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#y" class="tsd-kind-icon">y</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#z" class="tsd-kind-icon">z</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="data.circleinprofileplotgeometry.html#elementsystem" class="tsd-kind-icon">element<wbr>System</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.circleinprofileplotgeometry.html#firsttouchingpoint" class="tsd-kind-icon">first<wbr>Touching<wbr>Point</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.circleinprofileplotgeometry.html#maxgappoint" class="tsd-kind-icon">max<wbr>Gap<wbr>Point</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="data.circleinprofileplotgeometry.html#radius" class="tsd-kind-icon">radius</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.circleinprofileplotgeometry.html#secondtouchingpoint" class="tsd-kind-icon">second<wbr>Touching<wbr>Point</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="data.circleinprofileplotgeometry.html#type" class="tsd-kind-icon">type</a></li>
 							</ul>
 						</section>
 					</div>
@@ -105,80 +113,135 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Constructors</h2>
-				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class">
+				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class tsd-is-overwrite">
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
-					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Vector<span class="tsd-signature-symbol">(</span>x<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, y<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, z<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a></li>
+					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-overwrite">
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Circle<wbr>InProfile<wbr>Plot<wbr>Geometry<span class="tsd-signature-symbol">(</span>elementSystem<span class="tsd-signature-symbol">: </span><a href="data.elementsystem.html" class="tsd-signature-type">ElementSystem</a>, radius<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, firstTouchingPoint<span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a>, secondTouchingPoint<span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a>, maxGapPoint<span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.circleinprofileplotgeometry.html" class="tsd-signature-type">CircleInProfilePlotGeometry</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
+								<p>Overrides <a href="data.circleplotgeometry.html">CirclePlotGeometry</a>.<a href="data.circleplotgeometry.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in data/plot/vector.ts:10</li>
+									<li>Defined in data/plot/geometry.ts:155</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>x: <span class="tsd-signature-type">number</span></h5>
+									<h5>elementSystem: <a href="data.elementsystem.html" class="tsd-signature-type">ElementSystem</a></h5>
 								</li>
 								<li>
-									<h5>y: <span class="tsd-signature-type">number</span></h5>
+									<h5>radius: <span class="tsd-signature-type">number</span></h5>
 								</li>
 								<li>
-									<h5>z: <span class="tsd-signature-type">number</span></h5>
+									<h5>firstTouchingPoint: <a href="data.vector.html" class="tsd-signature-type">Vector</a></h5>
+								</li>
+								<li>
+									<h5>secondTouchingPoint: <a href="data.vector.html" class="tsd-signature-type">Vector</a></h5>
+								</li>
+								<li>
+									<h5>maxGapPoint: <a href="data.vector.html" class="tsd-signature-type">Vector</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="data.vector.html" class="tsd-signature-type">Vector</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="data.circleinprofileplotgeometry.html" class="tsd-signature-type">CircleInProfilePlotGeometry</a></h4>
 						</li>
 					</ul>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="x" class="tsd-anchor"></a>
-					<h3>x</h3>
-					<div class="tsd-signature tsd-kind-icon">x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
+					<a name="elementsystem" class="tsd-anchor"></a>
+					<h3>element<wbr>System</h3>
+					<div class="tsd-signature tsd-kind-icon">element<wbr>System<span class="tsd-signature-symbol">:</span> <a href="data.elementsystem.html" class="tsd-signature-type">ElementSystem</a></div>
 					<aside class="tsd-sources">
+						<p>Inherited from <a href="data.plotgeometry.html">PlotGeometry</a>.<a href="data.plotgeometry.html#elementsystem">elementSystem</a></p>
 						<ul>
-							<li>Defined in data/plot/vector.ts:20</li>
+							<li>Defined in data/plot/geometry.ts:111</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>X-Coordinate.</p>
+							<p>The 4x3 transformation matrix of this plot.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="y" class="tsd-anchor"></a>
-					<h3>y</h3>
-					<div class="tsd-signature tsd-kind-icon">y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<a name="firsttouchingpoint" class="tsd-anchor"></a>
+					<h3>first<wbr>Touching<wbr>Point</h3>
+					<div class="tsd-signature tsd-kind-icon">first<wbr>Touching<wbr>Point<span class="tsd-signature-symbol">:</span> <a href="data.vector.html" class="tsd-signature-type">Vector</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot/vector.ts:25</li>
+							<li>Defined in data/plot/geometry.ts:167</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Y-Coordinate.</p>
+							<p>The first touching point of the circle with the profile.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="z" class="tsd-anchor"></a>
-					<h3>z</h3>
-					<div class="tsd-signature tsd-kind-icon">z<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<a name="maxgappoint" class="tsd-anchor"></a>
+					<h3>max<wbr>Gap<wbr>Point</h3>
+					<div class="tsd-signature tsd-kind-icon">max<wbr>Gap<wbr>Point<span class="tsd-signature-symbol">:</span> <a href="data.vector.html" class="tsd-signature-type">Vector</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot/vector.ts:30</li>
+							<li>Defined in data/plot/geometry.ts:177</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Z-Coordinate.</p>
+							<p>The point on the circle which has the maximum distance from the profile.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
+					<a name="radius" class="tsd-anchor"></a>
+					<h3>radius</h3>
+					<div class="tsd-signature tsd-kind-icon">radius<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="data.circleplotgeometry.html">CirclePlotGeometry</a>.<a href="data.circleplotgeometry.html#radius">radius</a></p>
+						<ul>
+							<li>Defined in data/plot/geometry.ts:127</li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The radius of the circle.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="secondtouchingpoint" class="tsd-anchor"></a>
+					<h3>second<wbr>Touching<wbr>Point</h3>
+					<div class="tsd-signature tsd-kind-icon">second<wbr>Touching<wbr>Point<span class="tsd-signature-symbol">:</span> <a href="data.vector.html" class="tsd-signature-type">Vector</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in data/plot/geometry.ts:172</li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The second touching point of the circle with the profile.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
+					<a name="type" class="tsd-anchor"></a>
+					<h3>type</h3>
+					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#plotgeometrytype" class="tsd-signature-type">PlotGeometryType</a></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="data.plotgeometry.html">PlotGeometry</a>.<a href="data.plotgeometry.html#type">type</a></p>
+						<ul>
+							<li>Defined in data/plot/geometry.ts:106</li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The geometry type.</p>
 						</div>
 					</div>
 				</section>
@@ -241,19 +304,28 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-external-module">
-						<a href="data.vector.html" class="tsd-kind-icon">Vector</a>
+						<a href="data.circleinprofileplotgeometry.html" class="tsd-kind-icon">Circle<wbr>InProfile<wbr>Plot<wbr>Geometry</a>
 						<ul>
-							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="data.vector.html#constructor" class="tsd-kind-icon">constructor</a>
+							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-overwrite">
+								<a href="data.circleinprofileplotgeometry.html#constructor" class="tsd-kind-icon">constructor</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
+								<a href="data.circleinprofileplotgeometry.html#elementsystem" class="tsd-kind-icon">element<wbr>System</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="data.vector.html#x" class="tsd-kind-icon">x</a>
+								<a href="data.circleinprofileplotgeometry.html#firsttouchingpoint" class="tsd-kind-icon">first<wbr>Touching<wbr>Point</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="data.vector.html#y" class="tsd-kind-icon">y</a>
+								<a href="data.circleinprofileplotgeometry.html#maxgappoint" class="tsd-kind-icon">max<wbr>Gap<wbr>Point</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
+								<a href="data.circleinprofileplotgeometry.html#radius" class="tsd-kind-icon">radius</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="data.vector.html#z" class="tsd-kind-icon">z</a>
+								<a href="data.circleinprofileplotgeometry.html#secondtouchingpoint" class="tsd-kind-icon">second<wbr>Touching<wbr>Point</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
+								<a href="data.circleinprofileplotgeometry.html#type" class="tsd-kind-icon">type</a>
 							</li>
 						</ul>
 					</li>
