--- a/classes/data.plotgeometry.html
+++ b/classes/data.plotgeometry.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>LineDescription | PiWeb Plot Extension API Reference</title>
+	<title>PlotGeometry | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/drawing.html">drawing</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="drawing.linedescription-1.html">LineDescription</a>
+					<a href="data.plotgeometry.html">PlotGeometry</a>
 				</li>
 			</ul>
-			<h1>Interface LineDescription</h1>
+			<h1>Class PlotGeometry</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Can be used to initialize a <a href="../classes/drawing.linegeometry.html">LineGeometry</a>.</p>
+						<p>Base class for formplot geometries.</p>
 					</div>
 				</div>
 			</section>
@@ -78,10 +78,22 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">LineDescription</span>
+						<span class="target">PlotGeometry</span>
 						<ul class="tsd-hierarchy">
 							<li>
-								<a href="drawing.linegeometrydescription.html" class="tsd-signature-type">LineGeometryDescription</a>
+								<a href="data.circleplotgeometry.html" class="tsd-signature-type">CirclePlotGeometry</a>
+							</li>
+							<li>
+								<a href="data.cylinderplotgeometry.html" class="tsd-signature-type">CylinderPlotGeometry</a>
+							</li>
+							<li>
+								<a href="data.lineplotgeometry.html" class="tsd-signature-type">LinePlotGeometry</a>
+							</li>
+							<li>
+								<a href="data.pitchplotgeometry.html" class="tsd-signature-type">PitchPlotGeometry</a>
+							</li>
+							<li>
+								<a href="data.planeplotgeometry.html" class="tsd-signature-type">PlanePlotGeometry</a>
 							</li>
 						</ul>
 					</li>
@@ -92,47 +104,81 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
+							<h3>Constructors</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="data.plotgeometry.html#constructor" class="tsd-kind-icon">constructor</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotgeometry.html#elementsystem" class="tsd-kind-icon">element<wbr>System</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotgeometry.html#type" class="tsd-kind-icon">type</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Constructors</h2>
+				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class">
+					<a name="constructor" class="tsd-anchor"></a>
+					<h3>constructor</h3>
+					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Plot<wbr>Geometry<span class="tsd-signature-symbol">(</span>type<span class="tsd-signature-symbol">: </span><a href="../modules/data.html#plotgeometrytype" class="tsd-signature-type">PlotGeometryType</a>, elementSystem<span class="tsd-signature-symbol">: </span><a href="data.elementsystem.html" class="tsd-signature-type">ElementSystem</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.plotgeometry.html" class="tsd-signature-type">PlotGeometry</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in data/plot/geometry.ts:96</li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>type: <a href="../modules/data.html#plotgeometrytype" class="tsd-signature-type">PlotGeometryType</a></h5>
+								</li>
+								<li>
+									<h5>elementSystem: <a href="data.elementsystem.html" class="tsd-signature-type">ElementSystem</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="data.plotgeometry.html" class="tsd-signature-type">PlotGeometry</a></h4>
+						</li>
+					</ul>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="end" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> end</h3>
-					<div class="tsd-signature tsd-kind-icon">end<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="elementsystem" class="tsd-anchor"></a>
+					<h3>element<wbr>System</h3>
+					<div class="tsd-signature tsd-kind-icon">element<wbr>System<span class="tsd-signature-symbol">:</span> <a href="data.elementsystem.html" class="tsd-signature-type">ElementSystem</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:117</li>
+							<li>Defined in data/plot/geometry.ts:111</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The 4x3 transformation matrix of this plot.</p>
+						</div>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="start" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> start</h3>
-					<div class="tsd-signature tsd-kind-icon">start<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="type" class="tsd-anchor"></a>
+					<h3>type</h3>
+					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#plotgeometrytype" class="tsd-signature-type">PlotGeometryType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:116</li>
+							<li>Defined in data/plot/geometry.ts:106</li>
 						</ul>
 					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="transform" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> transform</h3>
-					<div class="tsd-signature tsd-kind-icon">transform<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#transformdescription" class="tsd-signature-type">TransformDescription</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:118</li>
-						</ul>
-					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The geometry type.</p>
+						</div>
+					</div>
 				</section>
 			</section>
 		</div>
@@ -145,10 +191,15 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/data.html">data</a>
-					</li>
 					<li class="current tsd-kind-external-module">
+						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -187,17 +238,17 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="drawing.linedescription-1.html" class="tsd-kind-icon">Line<wbr>Description</a>
+					<li class="current tsd-kind-class tsd-parent-kind-external-module">
+						<a href="data.plotgeometry.html" class="tsd-kind-icon">Plot<wbr>Geometry</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a>
+							<li class=" tsd-kind-constructor tsd-parent-kind-class">
+								<a href="data.plotgeometry.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.plotgeometry.html#elementsystem" class="tsd-kind-icon">element<wbr>System</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.plotgeometry.html#type" class="tsd-kind-icon">type</a>
 							</li>
 						</ul>
 					</li>
