--- a/classes/data.plotpoint.html
+++ b/classes/data.plotpoint.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Vector | PiWeb Plot Extension API Reference</title>
+	<title>PlotPoint | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,10 @@
 					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="data.vector.html">Vector</a>
+					<a href="data.plotpoint.html">PlotPoint</a>
 				</li>
 			</ul>
-			<h1>Class Vector</h1>
+			<h1>Class PlotPoint</h1>
 		</div>
 	</div>
 </header>
@@ -70,15 +70,43 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>A vector is a tuple of three numbers that can act as position, size and direction.</p>
+						<p>Base class for formplot points.</p>
 					</div>
+					<dl class="tsd-comment-tags">
+						<dt>version</dt>
+						<dd><p>1.4</p>
+						</dd>
+					</dl>
 				</div>
 			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Vector</span>
+						<span class="target">PlotPoint</span>
+						<ul class="tsd-hierarchy">
+							<li>
+								<a href="data.curveplotpoint.html" class="tsd-signature-type">CurvePlotPoint</a>
+							</li>
+							<li>
+								<a href="data.circleplotpoint.html" class="tsd-signature-type">CirclePlotPoint</a>
+							</li>
+							<li>
+								<a href="data.cylinderplotpoint.html" class="tsd-signature-type">CylinderPlotPoint</a>
+							</li>
+							<li>
+								<a href="data.fourierplotpoint.html" class="tsd-signature-type">FourierPlotPoint</a>
+							</li>
+							<li>
+								<a href="data.lineplotpoint.html" class="tsd-signature-type">LinePlotPoint</a>
+							</li>
+							<li>
+								<a href="data.pitchplotpoint.html" class="tsd-signature-type">PitchPlotPoint</a>
+							</li>
+							<li>
+								<a href="data.planeplotpoint.html" class="tsd-signature-type">PlanePlotPoint</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</section>
@@ -89,15 +117,15 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="data.vector.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="data.plotpoint.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#x" class="tsd-kind-icon">x</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#y" class="tsd-kind-icon">y</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.vector.html#z" class="tsd-kind-icon">z</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotpoint.html#properties" class="tsd-kind-icon">properties</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotpoint.html#state" class="tsd-kind-icon">state</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.plotpoint.html#tolerance" class="tsd-kind-icon">tolerance</a></li>
 							</ul>
 						</section>
 					</div>
@@ -109,28 +137,28 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Vector<span class="tsd-signature-symbol">(</span>x<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, y<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, z<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.vector.html" class="tsd-signature-type">Vector</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Plot<wbr>Point<span class="tsd-signature-symbol">(</span>tolerance<span class="tsd-signature-symbol">: </span><a href="data.plottolerance.html" class="tsd-signature-type">PlotTolerance</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span>, properties<span class="tsd-signature-symbol">: </span><a href="data.plotpropertycollection.html" class="tsd-signature-type">PlotPropertyCollection</a>, state<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PlotPointState.None</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Outlier</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Overlap</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.TiltedForce</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.TiltedAcceleration</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.EvaluationRange</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Duplicate</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.IgnoreGroove1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.IgnoreGroove2</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.AirScanning</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Virtual</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Gap</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.plotpoint.html" class="tsd-signature-type">PlotPoint</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in data/plot/vector.ts:10</li>
+									<li>Defined in data/plot/point.ts:82</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>x: <span class="tsd-signature-type">number</span></h5>
+									<h5>tolerance: <a href="data.plottolerance.html" class="tsd-signature-type">PlotTolerance</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></h5>
 								</li>
 								<li>
-									<h5>y: <span class="tsd-signature-type">number</span></h5>
+									<h5>properties: <a href="data.plotpropertycollection.html" class="tsd-signature-type">PlotPropertyCollection</a></h5>
 								</li>
 								<li>
-									<h5>z: <span class="tsd-signature-type">number</span></h5>
+									<h5>state: <span class="tsd-signature-type">PlotPointState.None</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Outlier</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Overlap</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.TiltedForce</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.TiltedAcceleration</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.EvaluationRange</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Duplicate</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.IgnoreGroove1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.IgnoreGroove2</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.AirScanning</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Virtual</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Gap</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="data.vector.html" class="tsd-signature-type">Vector</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="data.plotpoint.html" class="tsd-signature-type">PlotPoint</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -138,47 +166,47 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="x" class="tsd-anchor"></a>
-					<h3>x</h3>
-					<div class="tsd-signature tsd-kind-icon">x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<a name="properties" class="tsd-anchor"></a>
+					<h3>properties</h3>
+					<div class="tsd-signature tsd-kind-icon">properties<span class="tsd-signature-symbol">:</span> <a href="data.plotpropertycollection.html" class="tsd-signature-type">PlotPropertyCollection</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot/vector.ts:20</li>
+							<li>Defined in data/plot/point.ts:97</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>X-Coordinate.</p>
+							<p>The properties of this point.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="y" class="tsd-anchor"></a>
-					<h3>y</h3>
-					<div class="tsd-signature tsd-kind-icon">y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<a name="state" class="tsd-anchor"></a>
+					<h3>state</h3>
+					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">PlotPointState.None</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Outlier</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Overlap</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.TiltedForce</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.TiltedAcceleration</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.EvaluationRange</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Duplicate</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.IgnoreGroove1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.IgnoreGroove2</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.AirScanning</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Virtual</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">PlotPointState.Gap</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot/vector.ts:25</li>
+							<li>Defined in data/plot/point.ts:102</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Y-Coordinate.</p>
+							<p>The state of this point.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="z" class="tsd-anchor"></a>
-					<h3>z</h3>
-					<div class="tsd-signature tsd-kind-icon">z<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<a name="tolerance" class="tsd-anchor"></a>
+					<h3>tolerance</h3>
+					<div class="tsd-signature tsd-kind-icon">tolerance<span class="tsd-signature-symbol">:</span> <a href="data.plottolerance.html" class="tsd-signature-type">PlotTolerance</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot/vector.ts:30</li>
+							<li>Defined in data/plot/point.ts:92</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Z-Coordinate.</p>
+							<p>The tolerance of this particular point. Fallback to the plot tolerance in case it&#39;s <code>undefined</code>.</p>
 						</div>
 					</div>
 				</section>
@@ -241,19 +269,19 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-external-module">
-						<a href="data.vector.html" class="tsd-kind-icon">Vector</a>
+						<a href="data.plotpoint.html" class="tsd-kind-icon">Plot<wbr>Point</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="data.vector.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="data.plotpoint.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="data.vector.html#x" class="tsd-kind-icon">x</a>
+								<a href="data.plotpoint.html#properties" class="tsd-kind-icon">properties</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="data.vector.html#y" class="tsd-kind-icon">y</a>
+								<a href="data.plotpoint.html#state" class="tsd-kind-icon">state</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="data.vector.html#z" class="tsd-kind-icon">z</a>
+								<a href="data.plotpoint.html#tolerance" class="tsd-kind-icon">tolerance</a>
 							</li>
 						</ul>
 					</li>
