--- a/classes/data.segment.html
+++ b/classes/data.segment.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>LineDescription | PiWeb Plot Extension API Reference</title>
+	<title>Segment | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/drawing.html">drawing</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="drawing.linedescription-1.html">LineDescription</a>
+					<a href="data.segment.html">Segment</a>
 				</li>
 			</ul>
-			<h1>Interface LineDescription</h1>
+			<h1>Class Segment</h1>
 		</div>
 	</div>
 </header>
@@ -70,20 +70,20 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Can be used to initialize a <a href="../classes/drawing.linegeometry.html">LineGeometry</a>.</p>
+						<p>Represents a range of plot points.</p>
 					</div>
+					<dl class="tsd-comment-tags">
+						<dt>version</dt>
+						<dd><p>1.4</p>
+						</dd>
+					</dl>
 				</div>
 			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">LineDescription</span>
-						<ul class="tsd-hierarchy">
-							<li>
-								<a href="drawing.linegeometrydescription.html" class="tsd-signature-type">LineGeometryDescription</a>
-							</li>
-						</ul>
+						<span class="target">Segment</span>
 					</li>
 				</ul>
 			</section>
@@ -91,48 +91,103 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
+						<section class="tsd-index-section tsd-is-private tsd-is-private-protected">
+							<h3>Constructors</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-private"><a href="data.segment.html#constructor" class="tsd-kind-icon">constructor</a></li>
+							</ul>
+						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.segment.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.segment.html#points" class="tsd-kind-icon">points</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="data.segment.html#type" class="tsd-kind-icon">type</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-private tsd-is-private-protected">
+				<h2>Constructors</h2>
+				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
+					<a name="constructor" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> constructor</h3>
+					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Segment<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, type<span class="tsd-signature-symbol">: </span><a href="../modules/data.html#segmenttype" class="tsd-signature-type">SegmentType</a>, points<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><a href="data.plotpoint.html" class="tsd-signature-type">PlotPoint</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.segment.html" class="tsd-signature-type">Segment</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in data/plot/segment.ts:82</li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>name: <span class="tsd-signature-type">string</span></h5>
+								</li>
+								<li>
+									<h5>type: <a href="../modules/data.html#segmenttype" class="tsd-signature-type">SegmentType</a></h5>
+								</li>
+								<li>
+									<h5>points: <span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><a href="data.plotpoint.html" class="tsd-signature-type">PlotPoint</a><span class="tsd-signature-symbol">&gt;</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="data.segment.html" class="tsd-signature-type">Segment</a></h4>
+						</li>
+					</ul>
+				</section>
+			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="end" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> end</h3>
-					<div class="tsd-signature tsd-kind-icon">end<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="name" class="tsd-anchor"></a>
+					<h3>name</h3>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:117</li>
+							<li>Defined in data/plot/segment.ts:96</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The name of the segment.</p>
+						</div>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="start" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> start</h3>
-					<div class="tsd-signature tsd-kind-icon">start<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="points" class="tsd-anchor"></a>
+					<h3>points</h3>
+					<div class="tsd-signature tsd-kind-icon">points<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Iter</span><span class="tsd-signature-symbol">&lt;</span><a href="data.plotpoint.html" class="tsd-signature-type">PlotPoint</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:116</li>
+							<li>Defined in data/plot/segment.ts:106</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The points that are listed in this segment.</p>
+						</div>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="transform" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> transform</h3>
-					<div class="tsd-signature tsd-kind-icon">transform<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#transformdescription" class="tsd-signature-type">TransformDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
+					<a name="type" class="tsd-anchor"></a>
+					<h3>type</h3>
+					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <a href="../modules/data.html#segmenttype" class="tsd-signature-type">SegmentType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:118</li>
+							<li>Defined in data/plot/segment.ts:101</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The type of the segments, which can indicate how it&#39;s supposed to be displayed.</p>
+						</div>
+					</div>
 				</section>
 			</section>
 		</div>
@@ -145,10 +200,15 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/data.html">data</a>
-					</li>
 					<li class="current tsd-kind-external-module">
+						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -187,17 +247,20 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="drawing.linedescription-1.html" class="tsd-kind-icon">Line<wbr>Description</a>
+					<li class="current tsd-kind-class tsd-parent-kind-external-module">
+						<a href="data.segment.html" class="tsd-kind-icon">Segment</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a>
+							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
+								<a href="data.segment.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.segment.html#name" class="tsd-kind-icon">name</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.segment.html#points" class="tsd-kind-icon">points</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class">
+								<a href="data.segment.html#type" class="tsd-kind-icon">type</a>
 							</li>
 						</ul>
 					</li>
