--- a/enums/data.plotdeviationtypeid.html
+++ b/enums/data.plotdeviationtypeid.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>LineDescription | PiWeb Plot Extension API Reference</title>
+	<title>PlotDeviationTypeId | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/drawing.html">drawing</a>
+					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="drawing.linedescription-1.html">LineDescription</a>
+					<a href="data.plotdeviationtypeid.html">PlotDeviationTypeId</a>
 				</li>
 			</ul>
-			<h1>Interface LineDescription</h1>
+			<h1>Enumeration PlotDeviationTypeId</h1>
 		</div>
 	</div>
 </header>
@@ -69,68 +69,52 @@
 		<div class="col-8 col-content">
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>Can be used to initialize a <a href="../classes/drawing.linegeometry.html">LineGeometry</a>.</p>
-					</div>
 				</div>
-			</section>
-			<section class="tsd-panel tsd-hierarchy">
-				<h3>Hierarchy</h3>
-				<ul class="tsd-hierarchy">
-					<li>
-						<span class="target">LineDescription</span>
-						<ul class="tsd-hierarchy">
-							<li>
-								<a href="drawing.linegeometrydescription.html" class="tsd-signature-type">LineGeometryDescription</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Properties</h3>
+							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotdeviationtypeid.html#angle" class="tsd-kind-icon">Angle</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotdeviationtypeid.html#length" class="tsd-kind-icon">Length</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotdeviationtypeid.html#none" class="tsd-kind-icon">None</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="end" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> end</h3>
-					<div class="tsd-signature tsd-kind-icon">end<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<h2>Enumeration members</h2>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="angle" class="tsd-anchor"></a>
+					<h3>Angle</h3>
+					<div class="tsd-signature tsd-kind-icon">Angle<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:117</li>
+							<li>Defined in data/plot/geometry.ts:38</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="start" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> start</h3>
-					<div class="tsd-signature tsd-kind-icon">start<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="length" class="tsd-anchor"></a>
+					<h3>Length</h3>
+					<div class="tsd-signature tsd-kind-icon">Length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:116</li>
+							<li>Defined in data/plot/geometry.ts:37</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="transform" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> transform</h3>
-					<div class="tsd-signature tsd-kind-icon">transform<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#transformdescription" class="tsd-signature-type">TransformDescription</a></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="none" class="tsd-anchor"></a>
+					<h3>None</h3>
+					<div class="tsd-signature tsd-kind-icon">None<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/geometry/geometries.ts:118</li>
+							<li>Defined in data/plot/geometry.ts:36</li>
 						</ul>
 					</aside>
 				</section>
@@ -145,10 +129,15 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/data.html">data</a>
-					</li>
 					<li class="current tsd-kind-external-module">
+						<a href="../modules/data.html">data</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
+							</li>
+						</ul>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -187,17 +176,17 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="drawing.linedescription-1.html" class="tsd-kind-icon">Line<wbr>Description</a>
+					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
+						<a href="data.plotdeviationtypeid.html" class="tsd-kind-icon">Plot<wbr>Deviation<wbr>Type<wbr>Id</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#end" class="tsd-kind-icon">end</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.plotdeviationtypeid.html#angle" class="tsd-kind-icon">Angle</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#start" class="tsd-kind-icon">start</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.plotdeviationtypeid.html#length" class="tsd-kind-icon">Length</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="drawing.linedescription-1.html#transform" class="tsd-kind-icon">transform</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="data.plotdeviationtypeid.html#none" class="tsd-kind-icon">None</a>
 							</li>
 						</ul>
 					</li>
