--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
 							<td>7.2 or later</td>
 							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/MyExtension_1.1.zip">Download</a></td>
 						</tr>
+						<tr>
+							<td>7.4 or later</td>
+							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/MyExtension_1.2.zip">Download</a></td>
+						</tr>
+						<tr>
+							<td>7.8 or later</td>
+							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/MyExtension_1.3.zip">Download</a></td>
+						</tr>
+						<tr>
+							<td>8.0 or later</td>
+							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/MyExtension_1.4.zip">Download</a></td>
+						</tr>
 					</tbody>
 				</table>
 				<h3 id="1-create-the-folder-myextension">1. Create the folder <code>MyExtension</code></h3>
@@ -155,6 +167,10 @@
 						<tr>
 							<td>7.8 or later</td>
 							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/piweb-1-3.d.ts">Download</a></td>
+						</tr>
+						<tr>
+							<td>8.0 or later</td>
+							<td><a href="https://github.com/ZEISS-PiWeb/PiWeb-Plot-Extension/raw/master/piweb-1-4.d.ts">Download</a></td>
 						</tr>
 					</tbody>
 				</table>
